--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,6 @@ Description: tabseq is a standardized way of converting and
 License: GPL2
 Encoding: UTF-8
 LazyData: true
+Imports: dplyr, stringr, tidyr
+Suggests: tidyverse
+RoxygenNote: 7.1.1
