added a function to measure GC content

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(read_fasta)
 export(write_fasta)
 export(reverse_complement)
 export(read_gff)
+export(GC_content)
 import(dplyr)
 import(readr)
 import(stringr)
