--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(GC_content)
 export(read_fasta)
 export(read_gff)
+export(read_tabseq)
 export(reverse_complement)
 export(tsView)
 export(ts_neutralize)
