--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,4 @@ License: `use_mit_license()`
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
-Imports: dplyr, readr, stringr, tidyr
+Imports: dplyr, readr, stringr, tidyr, magrittr
