--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,11 +8,13 @@ Authors@R:
         role = c("aut", "cre"),
         comment = c(ORCID = "0000-0002-4461-1159"))
 Description: Tools for handling biological sequences in a tabular format, suited to be interoperable with tidyverse.
-License: GPL (2)
+License: MIT
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
-Imports: dplyr, readr, stringr, magrittr, tidyr
+Imports: dplyr, readr, stringr, tidyr, utils
+Depends: 
+    R (>= 3.6.3)
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
