--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(GC_content)
 export(expand_attributes)
 export(read_fasta)
 export(read_gff)
+export(read_gff_possibly_newer)
 export(read_tabseq)
 export(reverse_complement)
 export(tsView)
