--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
         role = c("aut", "cre"),
         comment = c(ORCID = "0000-0002-4461-1159"))
 Description: Tools for handling biological sequences in a tabular format, suited to be interoperable with tidyverse.
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
