--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,9 +12,11 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
-Imports: dplyr, readr, stringr, tidyr, utils
+Imports: dplyr, readr, stringr, tidyr, utils, Rcpp
 Depends: 
     R (>= 3.6.3)
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+LinkingTo: Rcpp
+
