--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,15 @@ export(read_gff)
 export(read_tabseq)
 export(reverse_complement)
 export(tsView)
+export(ts_kmer_count)
 export(ts_neutralize)
 export(write_fasta)
+import(Rcpp)
 import(dplyr)
 import(readr)
 import(stringr)
 import(tidyr)
 import(utils)
+importFrom(Rcpp,evalCpp)
+importFrom(magrittr,"%>%")
+useDynLib(tabseq)
